# GANFactory

./: CGAN.py  README.md  pyproject.toml
test/: gan_test.py
