[tool.poetry]
name = "ganfactory"
version = "0.1.0"
description = ""
authors = ["Masato Tsuchiya <malk271828@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
keras = "^2.3.1"
pytest = "^5.4.1"
colorama = "^0.4.3"
scikit-learn = "^0.22.2"
pandas = "^1.0.3"
torch = "^1.4.0"
tensorflow = "1.14.0"
pysnooper = "^0.3.0"
gofpatterns = {git = "https://github.com/malk271828/GoFPatterns"}
pyfunctor = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
